--- a/theme1_page.html
+++ b/theme1_page.html
@@ -452,7 +452,7 @@
 
 <p class="description-text">
     <strong>Sample description by:</strong> Team Members
-    (<a href="https://drive.google.com/file/d/1rSKNvlCdhZvlZ3oI5gh47GLO4henBmxI/view?usp=sharing" target="_blank">Click here</a>)
+    (<a href="https://docs.google.com/document/d/11rkBIPzTecCuT6U9FHx2CxH1Wj6vm4L1/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
         </div>
