--- a/theme2_page.html
+++ b/theme2_page.html
@@ -444,7 +444,7 @@
 </p>
 <p class="description-text">
     <strong>Sample description by:</strong> Team Members
-    (<a href="https://drive.google.com/file/d/1rSKNvlCdhZvlZ3oI5gh47GLO4henBmxI/view?usp=drive_link" target="_blank">Click here</a>)
+    (<a href="https://docs.google.com/document/d/1NbvyWsvLQNyXbTacBYOJrvn7dlDR3dnW/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
         </div>
