--- a/theme5_page.html
+++ b/theme5_page.html
@@ -445,7 +445,7 @@
 </p>
 <p class="description-text">
     <strong>Sample description by:</strong> Team Members
-    (<a href="https://docs.google.com/document/d/1vm1Ba3wnH0UNgVuoBE6fVbCIz1lrRRdd/edit?usp=drive_link&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
+    (<a href="https://docs.google.com/document/d/1-BEGxL0j8dONgA5yWUCRlzEthETee2e7/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
         </div>
