--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
     <h2>Key Dates</h2>
 
     <div class="dates-vertical">
-        <div class="date-v-card">
+        <div class="date-v-card highlight">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Registration Opens</h4>
@@ -1334,6 +1334,13 @@
                 <p>January 26, 2026</p>
             </div>
         </div>
+        <div class="date-v-card">
+            <span class="v-dot"></span>
+            <div class="v-content">
+                <h4>Hackathon begins</h4>
+                <p>January 27, 2026</p>
+            </div>
+        </div>
 
         <div class="date-v-card">
             <span class="v-dot"></span>
@@ -1342,7 +1349,17 @@
                 <p>February 4, 2026</p>
             </div>
         </div>
+        <div class="date-v-card">
+            <span class="v-dot"></span>
+            <div class="v-content">
+                <h4>Submission 1</h4>
+                <p>February 8-15, 2026</p>
+                <p>
+Participants are required to submit a detailed description of their proposed solution, including the core idea, planned workflow, and development approach. Submissions should clearly explain how the proposed artefact will facilitate effective collaboration between students and teachers. Teams are also expected to explicitly address ethical considerations, including responsible use of technology, data privacy, and fairness.
+</p>
 
+            </div>
+        </div>
         <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
@@ -1350,11 +1367,10 @@
                 <p>February 11, 2026</p>
             </div>
         </div>
-
-        <div class="date-v-card highlight">
+        <div class="date-v-card ">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Hackathon</h4>
+                <h4>Final Submission and Demo</h4>
                 <p>February 27–28, 2026</p>
             </div>
         </div>
@@ -1432,8 +1448,8 @@ Build. Compete. Get noticed by Microsoft.
 
 <div class="prize-box">
     <h3><span class="prize-icon"></span> Exclusive Microsoft Showcase</h3>
-    <p><strong>Top 4 teams</strong> (1 winner from each challenge)</p>
-    <p>Opportunity to present ideas to <strong>Microsoft leadership</strong></p>
+    
+    <p>Opportunity for <strong>Top 4 teams</strong> (1 winner from each challenge) to present ideas to <strong>Microsoft leadership</strong></p>
     <p>Presentation at <strong>Microsoft Garage, Noida</strong></p>
 </div>
 
