--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Rohan Roy, Math & Computing,https://www.linkedin.com/in/rohan-roy-a76035256/ , IIT Delhi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STEM AI Hackathon 2026</title>
     <style>
@@ -1360,7 +1361,7 @@
             <div class="v-content">
                 <h4>Submission 1</h4>
                 <p>February 11-13, 2026</p>
-                <p><i>Submission of workflow. Forms will be released soon</i></p>
+                <p><i>Submission of workflow. Form will be released soon</i></p>
 
             </div>
         </div>
@@ -1377,7 +1378,7 @@
             <div class="v-content">
                 <h4>Final Submission</h4>
                 <p>February 27, 2026</p>
-                <p><i>Forms will be released soon</i></p>
+                <p><i>Form will be released soon</i></p>
 
             </div>
         </div>
@@ -1391,7 +1392,7 @@
         <div class="date-v-card ">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Winner Present at Microsoft Garage, Noida in front of Senior Leadership</h4>
+                <h4>Winners Present at Microsoft Garage, Noida in front of Senior Leadership</h4>
                 <p>March, 2026</p>
             </div>
         </div>
@@ -1429,7 +1430,7 @@
                 <div class="timeline-content">
                     <h3>Phase 3: Hackathon</h3>
                     <p>Teams develop AI-prototypes for collaborative learning challenges</p>
-                    <span class="timeline-date">February 27-28, 2026 • Current Phase</span>
+                    <span class="timeline-date">February 4-27, 2026 • Current Phase</span>
                 </div>
             </div>
                         <div class="timeline-item upcoming">
@@ -1470,8 +1471,7 @@ Build. Compete. Get noticed by Microsoft.
 <div class="prize-box">
     <h3><span class="prize-icon"></span> Exclusive Microsoft Showcase</h3>
     
-    <p>Opportunity for <strong>Top 4 teams</strong> (1 winner from each challenge) to present ideas to <strong>Microsoft leadership</strong></p>
-    <p>Presentation at <strong>Microsoft Garage, Noida</strong></p>
+    <p>Opportunity for <strong>Top 4 teams</strong> (1 winner from each challenge) to present ideas to <strong>Microsoft leadership</strong> at <strong>Microsoft Garage, Noida</strong></p>
 </div>
 
 <div class="prize-box">
@@ -1521,7 +1521,7 @@ Build. Compete. Get noticed by Microsoft.
         </div>
 
         <div class="sponsor-box">
-            <a href="https://home.iitd.ac.in/" target="_blank" aria-label="IIT Delhi">
+            <a href="https://spp.iitd.ac.in/" target="_blank" aria-label="IIT Delhi">
                 <img src="iitd.png" alt="IIT Delhi"
                      onerror="this.parentElement.innerHTML='<div class=&quot;sponsor-fallback&quot;>IIT Delhi</div>'">
             </a>
