form link added

--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
     <!-- Content (UNCHANGED) -->
     <div class="hero-content">
         <h1>Welcome to the AI-Collab Hack</h1>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdC3YNNPTZhZIDdCGG6vPKqEo5Dc-COkoK_nAma19H1idYIvA/viewform?usp=dialog"
+        <a href="https://forms.gle/kSBa4TwDgPA86zrx6"
            target="_blank" class="register-btn">
             Register Now
         </a>
