--- a/theme1_page.html
+++ b/theme1_page.html
@@ -451,7 +451,7 @@
 </p>
 
 <p class="description-text">
-    <strong>Sample description by:</strong> Team Members
+    <strong>Challenge description by:</strong> Theme Champions
     (<a href="https://docs.google.com/document/d/11rkBIPzTecCuT6U9FHx2CxH1Wj6vm4L1/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
@@ -459,7 +459,7 @@
 
         <div class="developers-section">
             <h2>Theme Champions</h2>
-            <p class="developers-subtitle">Meet the experts guiding this theme</p>
+            <p class="developers-subtitle">Meet the experts who further developed the challenge.</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
@@ -496,7 +496,7 @@
     </div>
     <script>
         // IMPORTANT: Replace this URL with your Google Apps Script Web App URL
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwimJR822Vm57eMb3-Awm_2OU1OwjDrtC6SI2lLNo7kQ1YGI7PSxzQaINaPnKPKzcQj/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby6GvLt6_yxys8n8oJFktTwpxTkYwI6413crfH4zwRv_srqJVgwC4c0CQTasXDUnYtM/exec';
         const THEME_NUMBER = '1'; // This is Theme 1
 
         async function loadEnrolledTeams() {
