--- a/theme2_page.html
+++ b/theme2_page.html
@@ -443,7 +443,7 @@
     evolving peer-learning communities.
 </p>
 <p class="description-text">
-    <strong>Sample description by:</strong> Team Members
+    <strong>Challenge description by:</strong> Theme Champions
     (<a href="https://docs.google.com/document/d/1NbvyWsvLQNyXbTacBYOJrvn7dlDR3dnW/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
@@ -451,7 +451,7 @@
 
         <div class="developers-section">
             <h2>Theme Champions</h2>
-            <p class="developers-subtitle">Meet the experts guiding this theme</p>
+            <p class="developers-subtitle">Meet the experts who further developed the challenge.</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
@@ -481,7 +481,7 @@
     </div>
 
     <script>
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwimJR822Vm57eMb3-Awm_2OU1OwjDrtC6SI2lLNo7kQ1YGI7PSxzQaINaPnKPKzcQj/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby6GvLt6_yxys8n8oJFktTwpxTkYwI6413crfH4zwRv_srqJVgwC4c0CQTasXDUnYtM/exec';
         const THEME_NUMBER = '2';
 
         async function loadEnrolledTeams() {
