--- a/theme4_page.html
+++ b/theme4_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme 3 - AI Agents for Multilingual & Accessible Learning</title>
+    <title>Theme 2 - AI Agents for Peer Learning Communities</title>
     <style>
         * {
             margin: 0;
@@ -59,7 +59,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
             color: white;
             padding: 5rem 2rem;
             position: relative;
@@ -70,7 +70,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            background: url('data:image/svg+xml,<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><path d="M0 50h100" stroke="rgba(255,255,255,0.15)" stroke-width="1"/></svg>');
+            background: url('data:image/svg+xml,<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.12)"/></svg>');
             opacity: 0.3;
         }
 
@@ -101,7 +101,7 @@
         .header-subtitle {
             font-size: 1.2rem;
             opacity: 0.95;
-            max-width: 850px;
+            max-width: 800px;
         }
 
         .container {
@@ -128,7 +128,7 @@
             left: 0;
             width: 5px;
             height: 100%;
-            background: linear-gradient(180deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(180deg, #43cea2 0%, #185a9d 100%);
             border-radius: 15px 0 0 15px;
         }
 
@@ -145,7 +145,7 @@
             content: '';
             width: 40px;
             height: 4px;
-            background: linear-gradient(90deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(90deg, #43cea2 0%, #185a9d 100%);
             border-radius: 2px;
         }
 
@@ -173,14 +173,14 @@
 
         .focus-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 176, 155, 0.25);
-            border-color: #00b09b;
+            box-shadow: 0 8px 25px rgba(67, 206, 162, 0.2);
+            border-color: #43cea2;
         }
 
         .focus-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
             border-radius: 10px;
             display: flex;
             align-items: center;
@@ -240,14 +240,14 @@
 
         .developer-card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 15px 40px rgba(0, 176, 155, 0.3);
-            border-color: #00b09b;
+            box-shadow: 0 15px 40px rgba(67, 206, 162, 0.25);
+            border-color: #43cea2;
         }
 
         .developer-photo {
             width: 140px;
             height: 140px;
-            background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
             border-radius: 50%;
             margin: 0 auto 1.5rem;
             display: flex;
@@ -266,7 +266,7 @@
         }
 
         .developer-role {
-            color: #00b09b;
+            color: #43cea2;
             font-weight: 600;
             font-size: 0.95rem;
             margin-bottom: 1rem;
@@ -298,7 +298,7 @@
 
         .team-count {
             display: inline-block;
-            background: linear-gradient(135deg, #00b09b 0%, #96c93d 100%);
+            background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
             color: white;
             padding: 0.8rem 2rem;
             border-radius: 25px;
@@ -342,12 +342,12 @@
 
         .team-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 176, 155, 0.2);
-            border-color: #00b09b;
+            box-shadow: 0 10px 30px rgba(67, 206, 162, 0.2);
+            border-color: #43cea2;
         }
 
         .team-card h3 {
-            color: #00b09b;
+            color: #43cea2;
             font-size: 1.4rem;
             margin-bottom: 1.5rem;
             display: flex;
@@ -369,7 +369,7 @@
             margin-bottom: 0.5rem;
             background: white;
             border-radius: 8px;
-            border-left: 3px solid #00b09b;
+            border-left: 3px solid #43cea2;
             color: #555;
             font-size: 1rem;
         }
@@ -415,59 +415,56 @@
     </div>
 
     <div class="header">
-        <div class="header-content">
-            <span class="theme-label">Grand Challenge 3</span>
-            <h1>AI Agents for Multilingual & Accessibility Support</h1>
-            <p class="header-subtitle">
-                Designing inclusive AI systems that respect linguistic diversity, accessibility needs, and local knowledge
-            </p>
-        </div>
+    <div class="header-content">
+        <span class="theme-label">GRAND CHALLENGE 2</span>
+        <h1>AI Agents for matching learners with learners</h1>
+        <p class="header-subtitle">
+            Designing agent-based systems that connect learners through shared goals, expertise, and contextual similarity
+        </p>
     </div>
+</div>
+
 
     <div class="container">
         <div class="description-card">
             <h2 class="section-title">Challenge Overview</h2>
-            <p class="description-text">
-    This Grand Challenge focuses on leveraging AI agents to enable inclusive learning in
-    multilingual and accessibility-constrained environments. In a linguistically diverse
-    setting such as India, learners often face barriers related to language, modality, and
-    accessibility that limit effective collaboration and participation.
+<p class="description-text">
+    This Grand Challenge focuses on the design and deployment of AI-driven agent systems
+    that facilitate peer learning by intelligently matching learners based on shared goals,
+    levels of expertise, learning pace, and contextual similarity. By leveraging structured
+    knowledge repositories, internet-scale educational resources, and learner metadata,
+    these agents aim to form cohesive and productive collaboration groups.
     <br><br>
-    Participants are encouraged to design agent-based systems that understand individual
-    multilingual and accessibility needs using learner profile information, and dynamically
-    transform content through translation, summarization, and visual or modality-aware
-    representations. By adapting information to the most comfortable mode of interaction for
-    each learner, these systems aim to empower participants from diverse backgrounds and
-    capabilities, fostering deeper collaboration and more equitable access to learning
-    opportunities.
+    The challenge explores how AI agents can annotate learner proficiency, identify
+    similarities across subject domains, and incorporate contextual factors such as
+    institutional affiliation or geographic proximity (e.g., learners from the same
+    university). Through embedded reasoning and adaptive decision-making, these systems
+    seek to reduce learner isolation, accelerate knowledge acquisition, and enable scalable,
+    evolving peer-learning communities.
 </p>
 <p class="description-text">
-    <strong>Sample description by:</strong> Team Members
-    (<a href="https://docs.google.com/document/d/1Ij801uq3UOn1zV7LrJ0mie1QyUyDpZ1h/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
+    <strong>Challenge description by:</strong> Theme Champions
+    (<a href="https://docs.google.com/document/d/1NbvyWsvLQNyXbTacBYOJrvn7dlDR3dnW/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
+
         </div>
 
         <div class="developers-section">
             <h2>Theme Champions</h2>
-            <p class="developers-subtitle">Meet the experts guiding this theme</p>
+            <p class="developers-subtitle">Meet the experts who further developed the challenge.</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
                     <!-- <div class="developer-photo">Add Photo</div> -->
-                    <h3>Sambhav</h3>  
-                    <!-- <div class="developer-role">B.Tech. in Energy Sciences and Engineering, 2023</div> -->
+                    <h3>Humanshu D G</h3>
+                    <div class="developer-role">M.Tech in Electrical Engineering,2024</div>
+                    
                 </div>
                 <div class="developer-card">
                     <!-- <div class="developer-photo">Add Photo</div> -->
-                    <h3>Mayank</h3>
-                    <!-- <div class="developer-role">B.Tech. in Mechanical Engineering, 2023</div> -->
+                    <h3>Rohan Roy</h3>
+                    <div class="developer-role">B.Tech in Mathematics and Computing,2022</div>
                 </div>
-                <div class="developer-card">
-                    <!-- <div class="developer-photo">Add Photo</div> -->
-                    <h3>Sameer</h3>
-                    <!-- <div class="developer-role">B.Tech. in Mechanical Engineering, 2023</div> -->
-                </div>
-                
             </div>
         </div>
 
@@ -484,8 +481,8 @@
     </div>
 
     <script>
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwimJR822Vm57eMb3-Awm_2OU1OwjDrtC6SI2lLNo7kQ1YGI7PSxzQaINaPnKPKzcQj/exec';
-        const THEME_NUMBER = '4';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby6GvLt6_yxys8n8oJFktTwpxTkYwI6413crfH4zwRv_srqJVgwC4c0CQTasXDUnYtM/exec';
+        const THEME_NUMBER = '2';
 
         async function loadEnrolledTeams() {
             try {
