--- a/theme5_page.html
+++ b/theme5_page.html
@@ -444,7 +444,7 @@
     workflows.
 </p>
 <p class="description-text">
-    <strong>Sample description by:</strong> Team Members
+    <strong>Challenge description by:</strong> Theme Champions
     (<a href="https://docs.google.com/document/d/1-BEGxL0j8dONgA5yWUCRlzEthETee2e7/edit?usp=sharing&ouid=104703987066739556873&rtpof=true&sd=true" target="_blank">Click here</a>)
 </p>
 
@@ -452,7 +452,7 @@
 
         <div class="developers-section">
             <h2>Theme Champions</h2>
-            <p class="developers-subtitle">Meet the experts guiding this theme</p>
+            <p class="developers-subtitle">Meet the experts who further developed the challenge.</p>
 
             <div class="developers-grid">
                 <div class="developer-card">
@@ -486,7 +486,7 @@
     </div>
 
     <script>
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwimJR822Vm57eMb3-Awm_2OU1OwjDrtC6SI2lLNo7kQ1YGI7PSxzQaINaPnKPKzcQj/exec';
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycby6GvLt6_yxys8n8oJFktTwpxTkYwI6413crfH4zwRv_srqJVgwC4c0CQTasXDUnYtM/exec';
         const THEME_NUMBER = '4';
 
         async function loadEnrolledTeams() {
