--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
     <!-- Content (UNCHANGED) -->
     <div class="hero-content">
         <h1>Welcome to the AI-Collab Hack</h1>
-        <a href="https://forms.gle/kSBa4TwDgPA86zrx6"
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdC3YNNPTZhZIDdCGG6vPKqEo5Dc-COkoK_nAma19H1idYIvA/viewform?usp=dialog"
            target="_blank" class="register-btn">
             Register Now
         </a>
@@ -1333,11 +1333,14 @@
             </div>
         </div>
 
-        <div class="date-v-card">
+
+        
+         <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Orientation</h4>
+                <h4>Orientation and Expert Talk on AI tools for Higher Education</h4>
                 <p>February 4, 2026</p>
+                <p><i>Refreshments will be served</i></p>
             </div>
         </div>
         <div class="date-v-card">
@@ -1347,20 +1350,11 @@
                 <p>February 4, 2026</p>
             </div>
         </div>
-        
-         <div class="date-v-card">
-            <span class="v-dot"></span>
-            <div class="v-content">
-                <h4>Expert Talk on AI tools for Higher Education</h4>
-                <p>February 11, 2026</p>
-                <p><i>Refreshments will be served</i></p>
-            </div>
-        </div>
         <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Submission 1</h4>
-                <p>February 11-13, 2026</p>
+                <p>February 4-10, 2026</p>
                 <p><i>Submission of workflow. Form will be released soon</i></p>
 
             </div>
@@ -1369,7 +1363,7 @@
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Expert Talk on AI and Ethics</h4>
-                <p>February 14, 2026</p>
+                <p>February 11, 2026</p>
                 <p><i>Refreshments will be served</i></p>
             </div>
         </div>
