--- a/index.html
+++ b/index.html
@@ -1440,8 +1440,9 @@
          <div class="date-v-card">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Orientation and Expert Talk on AI tools for Higher Education</h4>
+                <h4>Expert Talk on AI tools for Higher Education</h4>
                 <p>February 4, 2026</p>
+                <p><i>Classroom venue will be updated</i></p>
                 <p><i>Refreshments will be served</i></p>
             </div>
         </div>
@@ -1466,6 +1467,7 @@
             <div class="v-content">
                 <h4>Expert Talk on AI and Ethics</h4>
                 <p>February 11, 2026</p>
+                <p><i>Classroom venue will be updated</i></p>
                 <p><i>Refreshments will be served</i></p>
             </div>
         </div>
