--- a/index.html
+++ b/index.html
@@ -1194,26 +1194,28 @@
 
 @media (max-width: 768px) {
     .top-partners-bar {
-        padding: 1rem;
+        padding: 0.6rem 1rem;  /* Reduced padding */
     }
     
     .top-partners-container {
         justify-content: center;
         text-align: center;
+        gap: 1rem;  /* Reduced gap */
     }
 
     .partners-label {
         width: 100%;
         margin-bottom: 0.5rem;
+        font-size: 0.7rem;  /* Smaller text */
     }
 
     .top-partners-logos {
         justify-content: center;
-        gap: 1.5rem;
+        gap: 1rem;  /* Reduced gap between logos */
     }
 
     .top-partner-logo {
-        height: 28px;
+        height: 22px;  /* Changed from 28px to 22px - much smaller */
     }
 }   
 
