--- a/index.html
+++ b/index.html
@@ -1499,8 +1499,9 @@
         <div class="date-v-card ">
             <span class="v-dot"></span>
             <div class="v-content">
-                <h4>Winners Present at Microsoft Garage, Noida in front of Senior Leadership</h4>
+                <h4>Winners Present in front of Senior Leadership of Microsoft</h4>
                 <p>March, 2026</p>
+                <p>Microsoft Garage, Noida</p>
             </div>
         </div>
     </div>
