--- a/index.html
+++ b/index.html
@@ -1515,8 +1515,9 @@
             <div class="v-content">
                 <h4>Introduction and Ice-Breaking session</h4>
                 <p>January 28, 2026</p>
-                <p><i>Classroom venue will be updated</i></p>
-                <p><i>Refreshments will be served</i></p>
+                <p><b>Time: 3:30 - 5:00</b></p>
+                <p><b>Venue: LH 310</b></p>
+                <p><b>Pizzas for all attendees</b></p>
             </div>
         </div>
 
@@ -1526,6 +1527,7 @@
             <div class="v-content">
                 <h4>Expert Talk on AI tools for Higher Education</h4>
                 <p>February 4, 2026</p>
+                <p><b>Speaker: <a href="https://www.linkedin.com/in/tanujabapat/">Tanuja Ganu</a>, Director of Research Engineering at Microsoft</b></p>
                 <p><i>Classroom venue will be updated</i></p>
                 <p><i>Refreshments will be served</i></p>
             </div>
