--- a/index.html
+++ b/index.html
@@ -1528,8 +1528,7 @@
                 <h4>Expert Talk on AI tools for Higher Education</h4>
                 <p>February 4, 2026</p>
                 <p><b>Speaker: <a href="https://www.linkedin.com/in/tanujabapat/">Tanuja Ganu</a>, Director of Research Engineering at Microsoft</b></p>
-                <p><i>Classroom venue will be updated</i></p>
-                <p><i>Refreshments will be served</i></p>
+                <p>Join the meet <a href="https://teams.microsoft.com/meet/42674212757833?p=e6P1czaw268Km1RqTj">here</a></p>
             </div>
         </div>
         <div class="date-v-card">
