--- a/index.html
+++ b/index.html
@@ -1375,8 +1375,11 @@
         </svg>
         <h3>Event Schedule</h3>
         <div class="schedule-item">
-            <strong>Registration Opens</strong>
-            <span>January 15, 2026</span>
+            <strong>Introductory session</strong>
+            <span><a href="https://drive.google.com/file/d/1O-KrraUSVxr83Ux-BgO9ZqCEIy3PoG98/view?usp=sharing">Find the schedule here</a></span>
+            <span>January 28, 2026</span>
+            <span>3:30 pm - 5 pm</span>
+            <span>LH 310</span>
         </div>
         <div class="schedule-item">
             <strong>Hackathon</strong>
@@ -1514,6 +1517,7 @@
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Introduction and Ice-Breaking session</h4>
+                <p><b>Fill this <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRU1SgwxHkRLm0ANIriXard_lvJDazafInIQ9oA1bNSDgeCg/viewform" style="color: black;">form</a></b></p>
                 <p>January 28, 2026</p>
                 <p><b>Time: 3:30 - 5:00</b></p>
                 <p><b>Venue: LH 310</b></p>
@@ -1528,6 +1532,7 @@
                 <h4>Expert Talk on AI tools for Higher Education</h4>
                 <p>February 4, 2026</p>
                 <p><b>Speaker: <a href="https://www.linkedin.com/in/tanujabapat/">Tanuja Ganu</a>, Director of Research Engineering at Microsoft</b></p>
+                <p>Time: 3:30 - 5:00</p>
                 <p>Join the meet <a href="https://teams.microsoft.com/meet/42674212757833?p=e6P1czaw268Km1RqTj">here</a></p>
             </div>
         </div>
