--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Introduction and Ice-Breaking session</h4>
-                <p><b>Fill this <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRU1SgwxHkRLm0ANIriXard_lvJDazafInIQ9oA1bNSDgeCg/viewform" style="color: black;">form</a></b></p>
+                <p><b>To be filled at the end of the session <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRU1SgwxHkRLm0ANIriXard_lvJDazafInIQ9oA1bNSDgeCg/viewform" style="color: black;">form</a></b></p>
                 <p>January 28, 2026</p>
                 <p><b>Time: 3:30 - 5:00</b></p>
                 <p><b>Venue: LH 310</b></p>
