--- a/index.html
+++ b/index.html
@@ -1427,6 +1427,7 @@
     <!-- Themes Section -->
     <section id="themes">
         <h2>Grand Challenges</h2>
+        Click on a Grand Challenge to know more! 
         <div class="theme-grid">
             <div class="theme-box" onclick="window.open('theme1_page.html', '_blank')">
                 <h3>AI agents for collaborative content creation and knowledge curation</h3>
@@ -1581,14 +1582,14 @@
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Announcement of Results</h4>
-                <p>Date will be announced soon.</p>
+                <p>End of March</p>
             </div>
         </div>
         <div class="date-v-card ">
             <span class="v-dot"></span>
             <div class="v-content">
                 <h4>Winners Present in front of Senior Leadership of Microsoft</h4>
-                <p>March, 2026</p>
+                <p>Date will be announced soon.</p>
                 <p>Microsoft Garage, Noida</p>
             </div>
         </div>
